scrapping the wiki tables for 3 years
+ beginning of df creation

--- a/FinalProject/jupy.ipynb
+++ b/FinalProject/jupy.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports and setup \n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
+    "\n",
+    "import requests\n",
     "\n",
     "import matplotlib.pyplot as plt \n",
     "plt.style.use('ggplot')\n",
@@ -21,41 +23,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-8a5654580d3a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mcols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'td'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[0mlink\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcols\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "{'2016': ['Love Yourself',\n",
+       "  'Sorry (Justin Bieber song)',\n",
+       "  'One Dance',\n",
+       "  'Work (Rihanna song)',\n",
+       "  'Stressed Out',\n",
+       "  'Panda (song)',\n",
+       "  'Hello (Adele song)',\n",
+       "  \"Don't Let Me Down (The Chainsmokers song)\",\n",
+       "  \"Can't Stop the Feeling!\",\n",
+       "  'Closer (The Chainsmokers song)',\n",
+       "  'Cheap Thrills (song)',\n",
+       "  '7 Years (Lukas Graham song)',\n",
+       "  'Needed Me',\n",
+       "  'My House (Flo Rida song)',\n",
+       "  'I Took a Pill in Ibiza',\n",
+       "  'Work from Home',\n",
+       "  'This Is What You Came For',\n",
+       "  'Cake by the Ocean',\n",
+       "  'Me, Myself & I (G-Eazy and Bebe Rexha song)',\n",
+       "  'Ride (Twenty One Pilots song)',\n",
+       "  'Heathens (song)',\n",
+       "  'Pillowtalk (song)',\n",
+       "  'Stitches (Shawn Mendes song)',\n",
+       "  'Hotline Bling',\n",
+       "  'Cold Water (song)',\n",
+       "  'Send My Love (To Your New Lover)',\n",
+       "  'Roses (The Chainsmokers song)',\n",
+       "  'Treat You Better',\n",
+       "  'Too Good (Drake song)',\n",
+       "  'Low Life (song)',\n",
+       "  'What Do You Mean?',\n",
+       "  'The Hills (song)',\n",
+       "  'Just Like Fire',\n",
+       "  'Broccoli (D.R.A.M. song)',\n",
+       "  \"Don't (Bryson Tiller song)\",\n",
+       "  'Dangerous Woman (song)',\n",
+       "  'Jumpman (song)',\n",
+       "  'I Hate U, I Love U',\n",
+       "  'Here (Alessia Cara song)',\n",
+       "  'Same Old Love',\n",
+       "  'Controlla',\n",
+       "  \"Like I'm Gonna Lose You\",\n",
+       "  'One Call Away (Charlie Puth song)',\n",
+       "  'Let It Go (James Bay song)',\n",
+       "  'No (Meghan Trainor song)',\n",
+       "  'Never Forget You (Zara Larsson and MNEK song)',\n",
+       "  'Let Me Love You (DJ Snake song)',\n",
+       "  \"Don't Mind (Kent Jones song)\",\n",
+       "  'H.O.L.Y.',\n",
+       "  \"We Don't Talk Anymore (Charlie Puth song)\",\n",
+       "  'Into You (Ariana Grande song)',\n",
+       "  'Gold (Kiiara song)',\n",
+       "  'Exchange (Bryson Tiller song)',\n",
+       "  '679 (song)',\n",
+       "  'Oui (song)',\n",
+       "  'Hands to Myself',\n",
+       "  '2 Phones',\n",
+       "  'Starboy (song)',\n",
+       "  'For Free',\n",
+       "  'Never Be Like You',\n",
+       "  'In the Night (The Weeknd song)',\n",
+       "  'Me Too (Meghan Trainor song)',\n",
+       "  \"Ex's & Oh's\",\n",
+       "  'Die a Happy Man',\n",
+       "  'White Iverson',\n",
+       "  'Close (Nick Jonas song)',\n",
+       "  'Unsteady (X Ambassadors song)',\n",
+       "  'Sucker for Pain',\n",
+       "  'Down in the DM',\n",
+       "  'Luv (Tory Lanez song)',\n",
+       "  'Sorry (Beyoncé song)',\n",
+       "  \"Can't Feel My Face\",\n",
+       "  'Hymn for the Weekend',\n",
+       "  'Say It (Tory Lanez song)',\n",
+       "  'Antidote (Travis Scott song)',\n",
+       "  'Lost Boy (Ruth B song)',\n",
+       "  'Side to Side',\n",
+       "  'Sit Still, Look Pretty',\n",
+       "  'Wildest Dreams (Taylor Swift song)',\n",
+       "  'Middle (DJ Snake song)',\n",
+       "  'On My Mind (Ellie Goulding song)',\n",
+       "  'Pop Style',\n",
+       "  'When We Were Young (Adele song)',\n",
+       "  'Hide Away (Daya song)',\n",
+       "  'Lean On',\n",
+       "  'I Know What You Did Last Summer (song)',\n",
+       "  'All the Way Up (Fat Joe and Remy Ma song)',\n",
+       "  'Watch Me (Whip/Nae Nae)',\n",
+       "  'Back to Sleep (song)',\n",
+       "  'No Limit (Usher song)',\n",
+       "  'Cut It (song)',\n",
+       "  'Really Really (song)',\n",
+       "  'All In My Head (Flex)',\n",
+       "  'Starving (song)',\n",
+       "  'Adventure of a Lifetime',\n",
+       "  'Humble and Kind',\n",
+       "  'Wicked (Future song)',\n",
+       "  'Tiimmy Turner',\n",
+       "  'See You Again (Wiz Khalifa song)',\n",
+       "  'Perfect (One Direction song)'],\n",
+       " '2017': ['Shape of You',\n",
+       "  'Despacito',\n",
+       "  \"That's What I Like (Bruno Mars song)\",\n",
+       "  'Humble (Kendrick Lamar song)',\n",
+       "  'Something Just Like This',\n",
+       "  'Bad and Boujee',\n",
+       "  'Closer (The Chainsmokers song)',\n",
+       "  'Body Like a Back Road',\n",
+       "  'Believer (Imagine Dragons song)',\n",
+       "  'Congratulations (Post Malone song)',\n",
+       "  \"Say You Won't Let Go\",\n",
+       "  \"I'm the One (DJ Khaled song)\",\n",
+       "  'XO Tour Llif3',\n",
+       "  'Mask Off',\n",
+       "  'Unforgettable (French Montana song)',\n",
+       "  '24K Magic (song)',\n",
+       "  'Stay (Zedd and Alessia Cara song)',\n",
+       "  'Wild Thoughts',\n",
+       "  'Black Beatles',\n",
+       "  'Starboy (song)',\n",
+       "  'Location (song)',\n",
+       "  'Attention (Charlie Puth song)',\n",
+       "  \"There's Nothing Holdin' Me Back\",\n",
+       "  'Bodak Yellow',\n",
+       "  'Redbone (song)',\n",
+       "  \"I Don't Wanna Live Forever\",\n",
+       "  \"It Ain't Me\",\n",
+       "  'ISpy (Kyle song)',\n",
+       "  'Issues (Julia Michaels song)',\n",
+       "  'Scars to Your Beautiful',\n",
+       "  '1-800-273-8255 (song)',\n",
+       "  'Slow Hands (Niall Horan song)',\n",
+       "  'Love on the Brain',\n",
+       "  'I Feel It Coming',\n",
+       "  'Bounce Back (Big Sean song)',\n",
+       "  'Strip That Down',\n",
+       "  'Fake Love (Drake song)',\n",
+       "  \"Don't Wanna Know\",\n",
+       "  'Look What You Made Me Do',\n",
+       "  'Castle on the Hill',\n",
+       "  'Bad Things (Machine Gun Kelly and Camila Cabello song)',\n",
+       "  'Paris (The Chainsmokers song)',\n",
+       "  'Side to Side',\n",
+       "  'Rockabye (song)',\n",
+       "  'Feel It Still',\n",
+       "  'Let Me Love You (DJ Snake song)',\n",
+       "  'Sorry Not Sorry (Demi Lovato song)',\n",
+       "  'Bank Account (song)',\n",
+       "  \"Can't Stop the Feeling!\",\n",
+       "  'Mi Gente (J Balvin and Willy William song)',\n",
+       "  'Thunder (Imagine Dragons song)',\n",
+       "  'T-Shirt (Migos song)',\n",
+       "  'Rake It Up',\n",
+       "  'Mercy (Shawn Mendes song)',\n",
+       "  'Tunnel Vision (Kodak Black song)',\n",
+       "  'Rockstar (Post Malone song)',\n",
+       "  \"In Case You Didn't Know (Brett Young song)\",\n",
+       "  'Heathens (song)',\n",
+       "  'Now or Never (Halsey song)',\n",
+       "  'Caroline (Aminé song)',\n",
+       "  'Rolex (song)',\n",
+       "  'DNA (Kendrick Lamar song)',\n",
+       "  'Juju on That Beat (TZ Anthem)',\n",
+       "  'Swang (song)',\n",
+       "  'Passionfruit (song)',\n",
+       "  'Loyalty (Kendrick Lamar song)',\n",
+       "  'Praying (song)',\n",
+       "  'Goosebumps (Travis Scott song)',\n",
+       "  'Cold (Maroon 5 song)',\n",
+       "  'Broccoli (D.R.A.M. song)',\n",
+       "  'Slide (Calvin Harris song)',\n",
+       "  'What Ifs',\n",
+       "  'Chained to the Rhythm',\n",
+       "  'Feels (song)',\n",
+       "  'All Time Low (Jon Bellion song)',\n",
+       "  'Hurricane (Luke Combs song)',\n",
+       "  'Too Good at Goodbyes',\n",
+       "  'Young Dumb & Broke',\n",
+       "  'Magnolia (song)',\n",
+       "  'Love Galore',\n",
+       "  'Drowning (A Boogie wit da Hoodie song)',\n",
+       "  'Starving (song)',\n",
+       "  'Both (song)',\n",
+       "  'What About Us (Pink song)',\n",
+       "  'Swalla',\n",
+       "  'Slippery (song)',\n",
+       "  'Sign of the Times (Harry Styles song)',\n",
+       "  'Water Under the Bridge (song)',\n",
+       "  'Malibu (Miley Cyrus song)',\n",
+       "  'Down (Marian Hill song)',\n",
+       "  'No Promises (Cheat Codes song)',\n",
+       "  'Treat You Better',\n",
+       "  'I Get the Bag',\n",
+       "  'Small Town Boy (song)',\n",
+       "  'Everyday We Lit',\n",
+       "  'Havana (Camila Cabello song)',\n",
+       "  'What Lovers Do',\n",
+       "  'Do Re Mi (Blackbear song)',\n",
+       "  'Look at Me (XXXTentacion song)',\n",
+       "  'The Fighter (Keith Urban song)'],\n",
+       " '2018': [\"God's Plan (song)\",\n",
+       "  'Perfect (Ed Sheeran song)',\n",
+       "  'Meant to Be (Bebe Rexha song)',\n",
+       "  'Havana (Camila Cabello song)',\n",
+       "  'Rockstar (Post Malone song)',\n",
+       "  'Psycho (Post Malone song)',\n",
+       "  'I Like It (Cardi B, Bad Bunny and J Balvin song)',\n",
+       "  'The Middle (Zedd, Maren Morris and Grey song)',\n",
+       "  'In My Feelings',\n",
+       "  'Girls Like You',\n",
+       "  'Nice for What',\n",
+       "  'Lucid Dreams (Juice Wrld song)',\n",
+       "  'Better Now (Post Malone song)',\n",
+       "  'Finesse (song)',\n",
+       "  \"Boo'd Up\",\n",
+       "  'New Rules (song)',\n",
+       "  'Sad!',\n",
+       "  'Never Be the Same (Camila Cabello song)',\n",
+       "  'Love Lies (song)',\n",
+       "  'No Tears Left to Cry',\n",
+       "  'Mine (Bazzi song)',\n",
+       "  'Thunder (Imagine Dragons song)',\n",
+       "  'Look Alive (BlocBoy JB song)',\n",
+       "  'Delicate (Taylor Swift song)',\n",
+       "  'Yes Indeed (song)',\n",
+       "  'Friends (Marshmello and Anne-Marie song)',\n",
+       "  'Bad at Love',\n",
+       "  'Taste (song)',\n",
+       "  'Let You Down (NF song)',\n",
+       "  'No Limit (G-Eazy song)',\n",
+       "  'Fefe (song)',\n",
+       "  'Tequila (Dan + Shay song)',\n",
+       "  'Feel It Still',\n",
+       "  'MotorSport',\n",
+       "  'I Like Me Better',\n",
+       "  'Youngblood (5 Seconds of Summer song)',\n",
+       "  'Whatever It Takes (Imagine Dragons song)',\n",
+       "  'Ric Flair Drip',\n",
+       "  'I Fall Apart',\n",
+       "  'Pray for Me (The Weeknd and Kendrick Lamar song)',\n",
+       "  'Back to You (Selena Gomez song)',\n",
+       "  'Sicko Mode',\n",
+       "  'Walk It Talk It',\n",
+       "  'Gucci Gang',\n",
+       "  'Him & I',\n",
+       "  'In My Blood (Shawn Mendes song)',\n",
+       "  'All the Stars',\n",
+       "  'Stir Fry (song)',\n",
+       "  'Too Good at Goodbyes',\n",
+       "  'Love (Kendrick Lamar song)',\n",
+       "  'This Is America (song)',\n",
+       "  'Nonstop (song)',\n",
+       "  'Heaven (Kane Brown song)',\n",
+       "  'Bodak Yellow',\n",
+       "  'Freaky Friday (song)',\n",
+       "  'Gummo (song)',\n",
+       "  'Plug Walk',\n",
+       "  'Wait (Maroon 5 song)',\n",
+       "  'Be Careful (Cardi B song)',\n",
+       "  'Wolves (Selena Gomez and Marshmello song)',\n",
+       "  'Bartier Cardi',\n",
+       "  'God Is a Woman',\n",
+       "  'Big Bank',\n",
+       "  'Sorry Not Sorry (Demi Lovato song)',\n",
+       "  'How Long (Charlie Puth song)',\n",
+       "  'Lights Down Low (Max song)',\n",
+       "  'Young Dumb & Broke',\n",
+       "  'One Kiss (song)',\n",
+       "  'Natural (Imagine Dragons song)',\n",
+       "  'You Make It Easy',\n",
+       "  'Shape of You',\n",
+       "  'I Get the Bag',\n",
+       "  'No Brainer (song)',\n",
+       "  'Plain Jane (song)',\n",
+       "  'Sky Walker (song)',\n",
+       "  'Marry Me (Thomas Rhett song)',\n",
+       "  'Eastside (song)',\n",
+       "  'Call Out My Name',\n",
+       "  \"King's Dead\",\n",
+       "  'Happier (Marshmello and Bastille song)',\n",
+       "  'Te Boté',\n",
+       "  'Simple (Florida Georgia Line song)',\n",
+       "  'Lemon (N.E.R.D and Rihanna song)',\n",
+       "  '1-800-273-8255 (song)',\n",
+       "  'Say Something (Justin Timberlake song)',\n",
+       "  \"I'm Upset\",\n",
+       "  'Get Along (Kenny Chesney song)',\n",
+       "  'Moonlight (XXXTentacion song)',\n",
+       "  'What Lovers Do',\n",
+       "  'X (Nicky Jam and J Balvin song)',\n",
+       "  'Outside Today',\n",
+       "  'Trip (Ella Mai song)',\n",
+       "  'Dura (song)',\n",
+       "  'Changes (XXXTentacion song)',\n",
+       "  'Mercy (Brett Young song)',\n",
+       "  'One Number Away',\n",
+       "  'Powerglide (song)',\n",
+       "  'IDGAF (Dua Lipa song)',\n",
+       "  'Mi Gente (J Balvin and Willy William song)',\n",
+       "  'Believer (Imagine Dragons song)']}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "links = []\n",
+    "titles={\"2016\": [],\"2017\": [], \"2018\":[]}\n",
+    "artists={\"2016\": [],\"2017\": [], \"2018\":[]}\n",
     "for i in range(6,9):\n",
     "    content = open(\"{}/Billboard Year-End Hot 100 singles of 201{} - Wikipedia.html\".format(DATA_PATH, i), encoding='utf-8')\n",
     "    soup_html = BeautifulSoup(content, \"html.parser\")\n",
     "\n",
     "    table = soup_html.find('table', {'class': 'wikitable sortable jquery-tablesorter'})\n",
-    "    rows = table.findAll('tr')\n",
+    "    rows = table.select('tbody tr')\n",
     "    for tr in rows:\n",
     "        cols = tr.findAll('td')\n",
-    "        link = cols[1].find('a').get('href')\n",
-    "        print(link)\n",
-    "    \n",
-    "    \n",
-    "    #results = soup_html.find_all(\"tr\", class_=\"wikitable sortable jquery-tablesorter\")\n",
-    "#     results = soup_html.find_all(\"td\", class_=False, id=False)\n",
-    "#     print(results)\n",
-    "#     for n in results:\n",
-    "#         links.append(n.get(\"href\"))\n",
-    "# print(links)"
+    "        titleStr = cols[0].find('a').get('title')\n",
+    "        artistStr = cols[1].find('a').get('title')\n",
+    "        titles[\"201{}\".format(i)].append(titleStr)\n",
+    "        artists[\"201{}\".format(i)].append(artistStr) \n",
+    "titles        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016_df\n",
+      "2017_df\n",
+      "2018_df\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Love Yourself</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Sorry (Justin Bieber song)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>One Dance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Work (Rihanna song)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Stressed Out</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Title\n",
+       "0               Love Yourself\n",
+       "1  Sorry (Justin Bieber song)\n",
+       "2                   One Dance\n",
+       "3         Work (Rihanna song)\n",
+       "4                Stressed Out"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songs_df={\"2016_df\": pd.DataFrame(),\"2017_df\": pd.DataFrame(), \"2018_df\":pd.DataFrame()}\n",
+    "for key, value in songs_df.items():\n",
+    "    print(key)\n",
+    "    songs_df[key]['Title'] = titles[\"2016\"]\n",
+    "songs_df[\"2016_df\"].head()"
    ]
   },
   {
@@ -82,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
