--- a/FinalProject/jupy.ipynb
+++ b/FinalProject/jupy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "  'Believer (Imagine Dragons song)']}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,43 +390,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Title</th>\n",
+       "      <th>Artist</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>Love Yourself</td>\n",
+       "      <td>Justin Bieber</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Sorry (Justin Bieber song)</td>\n",
+       "      <td>Justin Bieber</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>One Dance</td>\n",
+       "      <td>Drake (musician)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Work (Rihanna song)</td>\n",
+       "      <td>Rihanna</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>Stressed Out</td>\n",
+       "      <td>Twenty One Pilots</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Title\n",
-       "0               Love Yourself\n",
-       "1  Sorry (Justin Bieber song)\n",
-       "2                   One Dance\n",
-       "3         Work (Rihanna song)\n",
-       "4                Stressed Out"
+       "                        Title             Artist\n",
+       "0               Love Yourself      Justin Bieber\n",
+       "1  Sorry (Justin Bieber song)      Justin Bieber\n",
+       "2                   One Dance   Drake (musician)\n",
+       "3         Work (Rihanna song)            Rihanna\n",
+       "4                Stressed Out  Twenty One Pilots"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +442,7 @@
     "for key, value in songs_df.items():\n",
     "    print(key)\n",
     "    songs_df[key]['Title'] = titles[\"2016\"]\n",
+    "    songs_df[key]['Artist'] = artists[\"2016\"]\n",
     "songs_df[\"2016_df\"].head()"
    ]
   },
