--- a/FinalProject/SaveHtmlPages5.ipynb
+++ b/FinalProject/SaveHtmlPages5.ipynb
@@ -704,6 +704,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re \n",
+    "\n",
     "#the part of creation of the lyrics_texts dictionary which contain the lyrics of each song in top 2016,2017,2018\n",
     "\n",
     "all_words_count=[]\n",
@@ -1102,7 +1104,6 @@
     }
    ],
    "source": [
-    "import re \n",
     "#here we would like to count how many positive words can we see in each song lyrics\n",
     "\n",
     "count_pos=[]\n",
@@ -1249,6 +1250,9 @@
     "\n",
     "repeated_words=[]\n",
     "most_common_words=[]\n",
+    "\n",
+    "reg = re.compile('\\S{4,}')\n",
+    "\n",
     "\n",
     "for i in range (0,len(df_spotify)):\n",
     "    c = Counter(ma.group() for ma in reg.finditer(lyrics_without_empty_strings[i]))\n",
