add previous existed files in new location

--- a/FinalProject/getDataFromSpotify.ipynb
+++ b/FinalProject/getDataFromSpotify.ipynb
@@ -3071,8 +3071,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spotipy_final_yes.to_csv('top100spotify.csv')\n",
-    "df_spotipy_final_no.to_csv('NOTtop100spotify.csv')"
+    "df_spotipy_final_yes.to_csv('./data/top100spotify.csv')\n",
+    "df_spotipy_final_no.to_csv('./data/NOTtop100spotify.csv')"
    ]
   },
   {
@@ -3081,7 +3081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spotipy_final.to_csv('spotify.csv')"
+    "df_spotipy_final.to_csv('./data/spotify.csv')"
    ]
   }
  ],
